# notia

./: .env.example  .gitignore  README.md  a2as.yaml  pyproject.toml
rust_analyzer/: Cargo.toml
rust_analyzer/src/: lib.rs  stop_words.rs
src/: app.py  constants.py  core.py  main.py  models.py  tools.py  vector_store.py
