[project]
name = "notia"
version = "0.1.0"
description = "An application to manage notes and tasks with AI assistance."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai-agents==0.9.1",
    "chromadb==1.0.15",
    "rich==14.1.0",
    "httpx===0.28.1",
    "python-dotenv==1.1.1",
    "prompt-toolkit==3.0.51",
    "maturin>=1.9.4",
    "streamlit>=1.50.0",
]

[project.scripts]
notia = "main:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
